--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "drag-and-drop",
-  "version": "0.0.1",
+  "name": "miro",
+  "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
     "start": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
-  "devDependencies": {
-    "@mirohq/websdk-types": "latest",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.4.4",
-    "vite": "^2.9.13"
-  },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "mirotone": "3"
+  },
+  "devDependencies": {
+    "vite": "3.0.3"
   }
 }
